Refactor: Project structure update and add UI dependencies

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@types/prismjs": "^1.26.5",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.29.2",
     "gray-matter": "^4.0.3",
@@ -44,6 +45,7 @@
     "remark-directive": "^4.0.0",
     "remark-gfm": "^4.0.1",
     "shiki": "^3.21.0",
+    "tailwind-merge": "^3.4.0",
     "unist-util-visit": "^5.1.0"
   },
   "devDependencies": {
